--- a/service-api/package.json
+++ b/service-api/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/wouterdevinck/microservices-demo"
   },
   "author": "Wouter Devinck",
   "license": "Apache-2.0",
