Makefile and mongo improvements

--- a/service-mongo/Dockerfile
+++ b/service-mongo/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.6
+COPY run.sh .
 RUN apk add --no-cache mongodb dumb-init && \
     rm /usr/bin/mongoperf
 VOLUME /data/db
-EXPOSE 27017 28017
+EXPOSE 27017 27017
 ENTRYPOINT [ "dumb-init" ]
-CMD [ "mongod", "--bind_ip", "0.0.0.0" ]
+CMD [ "./run.sh" ]
