--- a/service-task-api/package.json
+++ b/service-task-api/package.json
@@ -15,10 +15,11 @@
   "author": "Wouter Devinck",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.16.2",
-    "mongodb": "^3.0.1"
+    "express": "^4.16.2"
   },
   "devDependencies": {
+    "@types/express": "^4.11.0",
+    "@types/mongoose": "^5.0.0",
     "concurrently": "^3.5.1",
     "nodemon": "^1.14.11",
     "rimraf": "^2.6.2",
