--- a/service-task-api/package.json
+++ b/service-task-api/package.json
@@ -15,10 +15,13 @@
   "author": "Wouter Devinck",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.11.0",
+    "@types/mongodb": "^3.0.5",
     "@types/mongoose": "^5.0.0",
     "concurrently": "^3.5.1",
     "nodemon": "^1.14.11",
