--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile-dev
     volumes:
         - ./service-task-api:/src
+    environment:
+      - DB_URL=mongodb://mongo/tasks
     ports: 
       - "4200:4200"
   mongo:
