--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   api:
     image: microservicesdemolyon/task-api
     build: ./service-task-api
+    environment:
+      - DB_URL=mongodb://mongo/tasks
     ports: 
       - "4200:4200"
   mongo:
