--- a/service-task-api/package.json
+++ b/service-task-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "demo-api",
+  "name": "task-api",
   "version": "0.0.0",
-  "description": "Docker Demo API Service",
+  "description": "Task API Service",
   "scripts": {
     "start": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Nodemon\" -c \"cyan.bold,green.bold\" \"tsc --watch --project tsconfig.json\" \"nodemon dist/server.js\"",
     "build": "tsc --project tsconfig.json",
