--- a/service-task-api/package.json
+++ b/service-task-api/package.json
@@ -26,6 +26,6 @@
     "concurrently": "^3.5.1",
     "nodemon": "^1.14.11",
     "rimraf": "^2.6.2",
-    "typescript": "^2.6.2"
+    "typescript": "2.6.2"
   }
 }
