--- a/service-frontend/tsconfig.json
+++ b/service-frontend/tsconfig.json
@@ -17,10 +17,10 @@
     ]
   },
   "angularCompilerOptions": {
-    "genDir": ".",
+    "genDir": "./src",
     "skipMetadataEmit": true
   },
   "include": [
-    "*.ts"
+    "src/*.ts"
   ]
 }
