--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: ./service-task-api
     environment:
       - DB_URL=mongodb://mongo/tasks
+      - ENABLE_CORS=true
     ports: 
       - "4200:4200"
   frontend:
