--- a/service-frontend/package.json
+++ b/service-frontend/package.json
@@ -16,17 +16,20 @@
   "author": "Wouter Devinck",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@angular/common": "^5.2.3",
-    "@angular/compiler": "^5.2.3",
-    "@angular/compiler-cli": "^5.2.3",
-    "@angular/core": "^5.2.3",
-    "@angular/platform-browser": "^5.2.3",
-    "@angular/platform-browser-dynamic": "^5.2.3",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
     "@types/node": "^9.4.0",
     "angular-router-loader": "^0.8.2",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.4.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "rxjs": "^5.5.6",
     "typescript": "2.6.2",
