--- a/service-frontend/package.json
+++ b/service-frontend/package.json
@@ -16,13 +16,13 @@
   "author": "Wouter Devinck",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/common": "^5.2.3",
+    "@angular/compiler": "^5.2.3",
+    "@angular/compiler-cli": "^5.2.3",
+    "@angular/core": "^5.2.3",
+    "@angular/forms": "^5.2.3",
+    "@angular/platform-browser": "^5.2.3",
+    "@angular/platform-browser-dynamic": "^5.2.3",
     "@types/node": "^9.4.0",
     "angular-router-loader": "^0.8.2",
     "angular2-template-loader": "^0.6.2",
